
Parma Polyhedra Library NEWS -- history of user-visible changes
===============================================================


--------------------------------------------------------------------------
NEWS for version 0.8  (released date to be decided)
--------------------------------------------------------------------------

New and Changed Features
========================

o  One of the possible values for the configuration option
   `--enable-coefficients' has been renamed from `gmp' to `mpz'.

o  Added to class Constraint the methods
     bool is_tautological() const;
   and
     bool is_inconsistent() const;
   returning true when the constraint is always or never satisfied,
   respectively.

o  Added to classes Constraint (resp., Generator) the method
     bool is_equivalent_to(const Constraint& y) const;
   (resp., bool is_equivalent_to(const Generator& y) const;)
   checking for semantic equivalence of corresponding class instances.
   Also made available the (semantic) comparison operators == and !=.

o  Added swap methods to classes Linear_Expression, Constraint, Generator,
   Constraint_System and Generator_System.

o  Portability has been improved.


Bugfixes
========

o  Fixed a bug whereby the occurrence of an `out of memory' error during
   the allocation of a row of integer coefficients could have resulted
   in a memory leak.

o  Fixed a bug affecting the specialized constructors
     Polyhedra_Powerset<NNC_Polyhedron>::
     Polyhedra_Powerset(const Polyhedra_Powerset<C_Polyhedron>& y);
   and
     Polyhedra_Powerset<C_Polyhedron>::
     Polyhedra_Powerset(const Polyhedra_Powerset<C_Polyhedron>& y);
   whereby the newly built Polyhedra_Powerset object could have been
   flagged as non-redundant even though it was containing redundant
   disjuncts. Fixed a similar bug in generic constructor
     Polyhedra_Powerset(const Constraint_System& cs);
   that manifests when `cs' is denoting an empty polyhedron.
